# Functional-Order-Book-Simulator-Haskell-Brick-TUI-

./: Engine.hs  Main.hs  OrderBookPure.hi  OrderBookPure.hs  README.md  UI.hs  orderbook-sim.cabal  orderbook.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Main.hs  OrderBook.hs
src/OrderBook/: State.hs  Types.hs
