cabal-version:      2.4
name:               orderbook-sim
version:            0.1.0.0
build-type:         Simple

executable orderbook-sim
    main-is:            Main.hs
    other-modules:
        OrderBook
        OrderBook.Types
        OrderBook.Engine
        OrderBook.UI
        OrderBook.State
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base               >= 4.14 && < 5,
        brick              >= 1.9  && < 2.0,
        vty                >= 5.36 && < 6.0,
        text               >= 1.2  && < 2.2,
        containers         >= 0.6  && < 0.8,
        random             >= 1.2  && < 1.3,
        microlens          >= 0.4  && < 0.5,
        microlens-th       >= 0.4  && < 0.5
